--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,5 +4,24 @@
     </head>
     <body>
         <h1> Hi, I am Andrew</h1>
+        <p> I build websites and cool things with code </p>
+
+        <section>
+            <h2> About me </h2>
+            <p> I am a Software Engineering and Business Finance Student Student at UTS and this is my website where I hope to show you all the projects, big and small I have built. </p>
+        </section>
+
+        <section>
+            <h2> Projects </h2>
+            <p> This is where my projects will go </p>
+        </section>
+
+        <section>
+            <h2> Contact me </h2>
+            <p> You can contact me at andrew.j.kelly-2@student.uts.edu.au </p>
+            <a href = "https://github.com/andrewkelly-2"> My GitHub Profile</a>
+            <a href = "https://www.linkedin.com/in/--andrew-kelly--"> My LinkedIn </a>"
+        </section>
+
     </body>
 </html>
