add CSS styling and hero section

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title> Andrew's Portfolio </title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1> Hi, I am Andrew</h1>
-        <p> I build websites and cool things with code </p>
+        <nav>
+            <ul>
+                <li><a href="#about-me"> About Me </a></li>
+                <li><a href="#projects"> Projects </a></li>
+                <li><a href="#contact-me"> Contact Me </a></li>
+            </ul>
+        </nav>
+        
+        <section id="hero">
+            <h1> Hi, I am Andrew</h1>
+            <p> I build websites and cool things with code </p>
+        </section>
 
-        <section>
+        <section id = "about-me">
             <h2> About me </h2>
             <p> I am a Software Engineering and Business Finance Student Student at UTS and this is my website where I hope to show you all the projects, big and small I have built. </p>
         </section>
 
-        <section>
+        <section id = "projects">
             <h2> Projects </h2>
             <p> This is where my projects will go </p>
         </section>
 
-        <section>
+        <section id = "contact-me">
             <h2> Contact me </h2>
             <p> You can contact me at andrew.j.kelly-2@student.uts.edu.au </p>
-            <a href = "https://github.com/andrewkelly-2"> My GitHub Profile</a>
-            <a href = "https://www.linkedin.com/in/--andrew-kelly--"> My LinkedIn </a>"
+            <p> Here is  <a href = "https://github.com/andrewkelly-2"> my GitHub Profile!</a> </p>
+            <a href = "https://www.linkedin.com/in/--andrew-kelly--"> My LinkedIn </a>
         </section>
 
     </body>
