add JavaScript smooth scroll

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,7 +12,7 @@
                 <li><a href="#contact-me"> Contact Me </a></li>
             </ul>
         </nav>
-        
+
         <section id="hero">
             <h1> Hi, I am Andrew</h1>
             <p> I build websites and cool things with code </p>
@@ -34,6 +34,7 @@
             <p> Here is  <a href = "https://github.com/andrewkelly-2"> my GitHub Profile!</a> </p>
             <a href = "https://www.linkedin.com/in/--andrew-kelly--"> My LinkedIn </a>
         </section>
-
+        
+        <script src="script.js"></script>
     </body>
 </html>
