redesign to Apple-inspired minimal style

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     </head>
     <body>
         <nav>
+            <div class="nav-name">Andrew Kelly</div>
             <ul>
-                <li><a href="#about-me"> About Me </a></li>
-                <li><a href="#projects"> Projects </a></li>
-                <li><a href="#contact-me"> Contact Me </a></li>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact-me">Contact Me</a></li>
             </ul>
         </nav>
 
@@ -32,7 +33,7 @@
             <h2> Contact me </h2>
             <p> You can contact me at andrew.j.kelly-2@student.uts.edu.au </p>
             <p> Here is  <a href = "https://github.com/andrewkelly-2"> my GitHub Profile!</a> </p>
-            <a href = "https://www.linkedin.com/in/--andrew-kelly--"> My LinkedIn </a>
+            <p> Here is my <a href = "https://www.linkedin.com/in/--andrew-kelly--"> LinkedIn Profile!</a> </p>
         </section>
         
         <script src="script.js"></script>
