--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <section id="hero">
             <h1> Hi, I am Andrew</h1>
             <p> I build websites and cool things with code </p>
+            <img src="profile.jpeg" alt="Profile Photo" class="profile-photo">
         </section>
 
         <section id = "about-me">
