added a projects block

--- a/index.html
+++ b/index.html
@@ -25,9 +25,30 @@
             <p> I am a Software Engineering and Business Finance Student Student at UTS and this is my website where I hope to show you all the projects, big and small I have built. </p>
         </section>
 
-        <section id = "projects">
-            <h2> Projects </h2>
-            <p> This is where my projects will go </p>
+        <section id="projects">
+            <h2>Projects</h2>
+            
+            <div class="filter-buttons">
+                <button class="filter-btn active" data-filter="all">All</button>
+                <button class="filter-btn" data-filter="web">Web</button>
+                <button class="filter-btn" data-filter="python">Python</button>
+                <button class="filter-btn" data-filter="app">App</button>
+            </div>
+
+            <div class="projects-grid">
+                <div class="project-card" data-category="web">
+                    <h3>Portfolio Website</h3>
+                    <p>My personal portfolio site built with HTML, CSS and JavaScript.</p>
+                </div>
+                <div class="project-card" data-category="python">
+                    <h3>Coming Soon</h3>
+                    <p>A Python project coming here soon.</p>
+                </div>
+                <div class="project-card" data-category="app">
+                    <h3>Coming Soon</h3>
+                    <p>An app project coming here soon.</p>
+                </div>
+            </div>
         </section>
 
         <section id = "contact-me">
